// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.win
  </h4>
  <p
    className="spacer-bottom markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.text.win",
      }
    }
  />
  <p>
    <a
      className="button"
      href="http://redirect.sonarsource.com/doc/install-configure-scanner.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      download_verb
    </a>
  </p>
</div>
`;

exports[`renders correctly 2`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.linux
  </h4>
  <p
    className="spacer-bottom markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.text.linux",
      }
    }
  />
  <p>
    <a
      className="button"
      href="http://redirect.sonarsource.com/doc/install-configure-scanner.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      download_verb
    </a>
  </p>
</div>
`;

exports[`renders correctly 3`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.mac
  </h4>
  <p
    className="spacer-bottom markdown"
    dangerouslySetInnerHTML={
      Object {
        "__html": "onboarding.analysis.sq_scanner.text.mac",
      }
    }
  />
  <p>
    <a
      className="button"
      href="http://redirect.sonarsource.com/doc/install-configure-scanner.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      download_verb
    </a>
  </p>
</div>
`;
